<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@android:color/white"
    android:padding="12dp">

    <!-- Logo + tên -->
    <LinearLayout
        android:id="@+id/logo_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/logo_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_labverse" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/labverse"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Nút chuông -->
    <ImageButton
        android:id="@+id/btn_notification"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/notifications"
        android:src="@drawable/ic_bell"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Avatar -->
    <ImageView
        android:id="@+id/avatar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/bg_circle_crop"
        android:clipToOutline="true"
        android:contentDescription="@string/user_avatar"
        android:elevation="2dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/avt_mock_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
