<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Tags -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/tags_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:orientation="horizontal"
            android:spacing="8dp">

        </LinearLayout>
    </HorizontalScrollView>

    <!-- Recommended Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="clip_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recommended_for_you"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="@color/blue"
            android:textSize="14sp" />
    </LinearLayout>

    <include layout="@layout/layout_feed_paper_card" />

    <include layout="@layout/layout_feed_paper_card_trending" />

    <include layout="@layout/layout_feed_paper_card_collab" />

    <include layout="@layout/layout_common_component_pagination" />

    <!-- Recent Alerts -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/recent_alerts"
        android:textSize="16sp"
        android:textStyle="bold" />

    <include layout="@layout/layout_feed_alert" />

    <include layout="@layout/layout_feed_alert" />
</LinearLayout>
